# flowVC-utils

./: .gitignore  FTLE_example.html  README.md  README.org  header.html  index.html  inigenerator.html  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini  vtu_2bin.html
.github/workflows/: docs.yml  tests.yml
docs/: build-site.el  build.sh
docs/content/: FTLE_example.org  header.org  index.org  inigenerator.org  vtu_2bin.org
docs/content/css/: readtheorg.css
docs/org-themes/: theme-readtheorg.setup
src/config/: config.inigenerator.backup  config.inigenerator.cfg
src/flowvcutils/: __main__.py  cli.py  filerename.py  inigenerator.py  jsonlogger.py  main.py  postprocess.py  simulationgenerator.py  vtu_2_bin.py
src/flowvcutils/logging_configs/: config.json
tests/: test_cli.py  test_filerename.py  test_inigenerator.py  test_jsonlogger.py  test_main.py  test_simulationgenerator.py  test_vtu_2_bin.py
