[metadata]

name = flowvcutils
description = Utilities to setup, run and post process flowvc
author = Bray Moll
readme = "README.org"
version = 0.0.1

[options]
packages =
   flowvcutils



install_requires =
   numpy >= 1.24.0
   vtk >= 9.2.6
   click >= 8.1.7

python_requires = >=3.8

package_dir =
    =src

zip_safe = no

[options.extras_require]
testing =
    pytest>= 8.0
    pytest-cov>=5.0
    mypy >= 1.0.0
    flake8>=7.0.0
    tox>=4.0.0
    pre-commit>=4.0.0


[options.package_data]
flowvcutils =
    py.typed
    logging_configs/config.json

[flake8]
max-line-length = 88
ignore = E203, W503
